# codewave

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
backend/: .env.example  .flake8  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini
backend/apps/: main.py
backend/apps/api/: schemas.py
backend/apps/core/: config.py  docs.py
backend/apps/db/: base.py  session.py
backend/docs/: testing.md
backend/migrations/: env.py
backend/migrations/versions/: 1a5887b71ffb_create_user_system_tables.py  41346260175c_init_base_tables.py
backend/tests/: conftest.py  constants.py  test_version.py
backend/tests/api/: base.py  conftest.py  test_example.py  test_health.py
backend/tests/apps/db/: test_session.py
docs/: README.md
docs/api/frontend/: editor.md
docs/api/frontend/code-snippets/: create.md  delete.md  get.md  list.md  update.md  versions.md
docs/architecture/frontend/: framework-design.md
docs/development/: README.md  backend-setup.md  frontend-setup.md  git-workflow.md  tools.md
docs/development/editor/: editor-development.md  editor-usage.md
docs/development/frontend/editor/: editor-testing.md
docs/guidelines/: README.md  code-quality.md
docs/guidelines/backend/: python-guidelines.md
docs/guidelines/code/: code-quality.md
docs/guidelines/frontend/: typescript-react-guidelines.md
docs/guidelines/general/git/: git-workflow.md  version-control.md
docs/guidelines/git/: git-workflow.md
docs/templates/: deployment-template.md
frontend/: .eslintrc.json  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
frontend/.turbo/daemon/: 4115fca867d420c3-turbo.log.2025-01-09
frontend/apps/web/: .eslintrc.js  next.config.js  package.json  tsconfig.json  vitest.config.ts
frontend/apps/web/src/app/: page.tsx
frontend/apps/web/src/components/: CodeEditor.tsx
frontend/apps/web/src/components/editor/: CodeEditor.tsx  EditorToolbar.tsx  LanguageSelector.tsx
frontend/apps/web/src/components/layout/: MainLayout.tsx
frontend/apps/web/src/components/layout/__tests__/: MainLayout.test.tsx
frontend/apps/web/src/components/panels/LeftPanels/: Hints.tsx  Questions.tsx  TestRun.tsx
frontend/apps/web/src/components/panels/RightPanels/: Chat.tsx  Progress.tsx  Warnings.tsx
frontend/apps/web/src/hooks/: useHotkeys.ts  usePanelSize.ts  usePanels.ts  useResponsive.ts  useSplitPanel.ts
frontend/apps/web/src/layouts/: MainLayout.tsx
frontend/apps/web/src/stores/: editorStore.ts
frontend/apps/web/src/styles/: split.css
frontend/apps/web/src/test/: setup.ts
frontend/apps/web/src/types/: editor.ts
templates/: architecture-template.md  development-template.md  guideline-template.md
